# nhl-global-series-discord-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  state.json
nhl_global_series_discord_bot/: checker.py  main.py  notifier.py
nhl_global_series_discord_bot/utils/: config.py
